tests/errors/regex-quantifier-on-anchor/main.pa
# A quantifier applied to the start-anchor `^`.
def main = `^*`
